optimise and improve performance

--- a/ProxmoxAnsible/ansible.cfg
+++ b/ProxmoxAnsible/ansible.cfg
@@ -7,5 +7,6 @@ callbacks_enabled = ansible.posix.timer
 host_key_checking = False
 interpreter_python = auto_silent
 
-[callback_default]
-result_format = yaml
+[connection]
+pipelining = True
+
