--- a/ProxmoxAnsible/tasks/env.yml
+++ b/ProxmoxAnsible/tasks/env.yml
@@ -34,26 +34,18 @@
             name: dopplerhq/cli/doppler
             state: present
 
-      - name: Verify and Configure Doppler
+      - name: Retrieve Doppler Secrets
         block:
-            - name: Verify Project
-              command: doppler projects get {{ doppler_info.project }}
+            - name: Download Secrets
+              command: doppler secrets download --project {{ doppler_info.project }} --config {{ doppler_info.config }} --no-file --format json
+              register: secrets_output
               changed_when: false
-
-            - name: Configure Project
-              command: doppler setup --project {{ doppler_info.project }} --config {{ doppler_info.config }} --no-interactive
-              changed_when: false
+              no_log: true
 
         rescue:
-            - name: Doppler Project Access Failed for '{{ doppler_info.project }}'
+            - name: Doppler Login Required
               fail:
-                  msg: "Log in with 'doppler login'"
-
-      - name: Download Secrets
-        command: doppler secrets download --no-file --format json
-        register: secrets_output
-        changed_when: false
-        no_log: true
+                  msg: 'FAILED: `doppler login` required for {{ doppler_info.project }}/{{ doppler_info.config }}'
 
       - name: Parse and Verify Secrets
         set_fact:
