--- a/ProxmoxAnsible/tasks/instances/apps_lxc/pihole.yml
+++ b/ProxmoxAnsible/tasks/instances/apps_lxc/pihole.yml
@@ -27,14 +27,14 @@
           WEBTHEME: default-darker
           WEBPASSWORD: '{{ env.JARVIS_ADMIN_PASSWORD }}'
           PIHOLE_DNS_: '{{ env.JARVIS_DNS_SERVERS | join(";") }}'
-          FTLCONF_LOCAL_IPV4: '{{ lxc.ip }}'
+          FTLCONF_LOCAL_IPV4: '{{ instance.ip }}'
       ports:
           - '53:53/tcp'
           - '53:53/udp'
           - '7777:80'
       volumes:
-          - '{{ lxc.configs }}/{{ container_id }}/etc:/etc/pihole'
-          - '{{ lxc.configs }}/{{ container_id }}/dnsmasq:/etc/dnsmasq.d'
+          - '{{ instance.configs }}/{{ container_id }}/etc:/etc/pihole'
+          - '{{ instance.configs }}/{{ container_id }}/dnsmasq:/etc/dnsmasq.d'
       labels:
           traefik.enable: 'true'
           traefik.http.routers.{{ container_id }}.rule: 'Host(`{{ container_id }}.{{ env.JARVIS_DOMAIN }}`)'
@@ -44,4 +44,4 @@
           traefik.http.routers.{{ container_id }}.service: '{{ container_id }}'
           traefik.http.services.{{ container_id }}.loadbalancer.server.port: '80'
           traefik.http.routers.{{ container_id }}.middlewares: 'chain-auth@file'
-      docker_host: 'tcp://{{ lxc.ip }}:2375'
+      docker_host: '{{ docker_host }}'
